# fiap-esg-devops

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/: documentacao.html
docs/evidence/: smoke-tests.txt  vps-state.txt
mongo-init/: 01-seed.js
src/: config.py  main.py  schemas.py
src/db/: mongo.py
src/routers/: crud.py
tests/: conftest.py  test_crud_emissoes.py  test_crud_empresas.py  test_meta.py
